--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
 }
 
 .container-principal {
@@ -163,8 +163,63 @@ h5 {
 }
 
 .last-container img {
-        cursor: pointer;
-        height: 20px;
-        width: 20px;
-        margin: 50px 10px 10px 50px;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    margin: 50px 10px 10px 50px;
+    position: relative;
+}
+
+.menu-icon {
+    width: 25px;
+    margin-right: 15px;
+    display: none;
+}
+
+@media (max-width: 800px) {
+    
+    .container-principal {
+        width: 100vw;
+        height: 100vh;
+        border-radius: 0;
+        overflow: auto;
+    }
+
+    .container-2 {
+        flex-direction: column-reverse;
+    }
+
+    .container-right {
+        margin-top: 80px;
+    }
+
+    .color-box {
+        transform: translateX(90px) 
+    }
+
+    .add-cart img {
+        height: 110%;
+        width: 110%;
+    }
+
+    .container-left {
+        margin-top: 40px ;
+    }
+
+    #menu-list {
+        position: relative;
+        top: 60px;
+        left: 60px;
+        overflow: hidden;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .nav-li {
+        display: block;
+        margin-top: 5px;
+    }
+
 }
